# bulletin-board-system

bbs_backend/: .gitignore  .vscode  db.sqlite3  manage.py  pyproject.toml
bbs_backend/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
bbs_backend/authentication/migrations/: 0001_initial.py  0002_auto_20230625_1106.py  0003_alter_customuser_gender.py  0004_alter_customuser_gender.py  0005_auto_20230625_1120.py  0006_auto_20230625_1121.py  0007_customuser_avatar.py  0008_alter_customuser_avatar.py  0009_alter_customuser_avatar.py  0010_alter_customuser_avatar.py  0011_auto_20230706_1021.py  0012_auto_20230706_1035.py  0013_alter_customuser_website.py  0014_auto_20230706_1040.py  0015_auto_20230706_1622.py
bbs_backend/bbs_backend/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
bbs_backend/mainapp/: admin.py  models.py  serializers.py  urls.py  views.py
bbs_backend/mainapp/migrations/: 0001_initial.py  0002_board_topic.py  0002_thread_sticky.py  0003_auto_20230706_1027.py
bbs_backend/static/images/: default-avatar-profile-icon-of-social-media-user-vector.jpg:Zone.Identifier
bbs_frontend/: .env.example  .eslintrc.json  .prettierrc  config-overrides.js  package-lock.json  package.json  tsconfig.json
bbs_frontend/src/: App.css  App.tsx  index.tsx
bbs_frontend/src/components/: BoardPage.tsx  HomePage.tsx  LoginPage.tsx  NavBar.css  ProfilePage.tsx  RegistrationPage.tsx  ThreadPage.tsx  utils.ts
bbs_frontend/src/stores/: AdministratorStore.ts  BoardStore.ts  ModeratorStore.ts  PostStore.ts  PosterStore.ts  RootStore.ts  (+3 more)
